--- a/02-Feature-representation.Rmd
+++ b/02-Feature-representation.Rmd
@@ -7,7 +7,7 @@
 
 To work in a GIS environment, real world observations (objects or events that can be recorded in 2D or 3D space) need to be reduced to spatial entities. These spatial entities can be represented in a GIS as a **vector data model** or a **raster data model**. 
 
-```{r vec-rast, echo=FALSE, fig.cap = "Vector and raster representations of a river feature.", fig.width=3}
+```{r vec-rast, echo=FALSE, fig.cap = "Vector and raster representations of a river feature.", fig.width=3, fig.align='center'}
 
 knitr::include_graphics("img/vector_vs_raster.jpg")
 ```
@@ -19,7 +19,7 @@ Vector features can be decomposed into three different geometric primitives: **p
 
 #### Point
 
-```{r echo=FALSE, fig.cap = "Three point objects defined by their X and Y coordinate values.", fig.height=1.8, fig.width=1.8}
+```{r echo=FALSE, fig.cap = "Three point objects defined by their X and Y coordinate values.", fig.height=1.8, fig.width=1.8, fig.align='center'}
 library(ggplot2)
 OP <- par( mar=c(0,0,0,0))
  X <- c(1,3,2)
@@ -37,7 +37,7 @@ We seem capable of interpreting such symbols as points, but there may be instanc
 
 #### Polyline
 
-```{r echo=FALSE, fig.cap = "A simple polyline object defined by connected vertices.", fig.height=1.8, fig.width=1.8}
+```{r echo=FALSE, fig.cap = "A simple polyline object defined by connected vertices.", fig.height=1.8, fig.width=1.8, fig.align='center'}
 
 OP <- par( mar=c(0,0,0,0))
 ggplot()  + geom_line(aes(x=X, y=Y), col="red", size=1) +
@@ -56,7 +56,7 @@ Like a point, a true line can't be seen since it has no area. And like a point, 
 
 #### Polygon
 
-```{r echo=FALSE, fig.cap = "A simple polygon object defined by an area enclosed by connected vertices.", fig.height=1.8, fig.width=1.8}
+```{r echo=FALSE, fig.cap = "A simple polygon object defined by an area enclosed by connected vertices.", fig.height=1.8, fig.width=1.8, fig.align='center'}
 OP <- par( mar=c(0,0,0,0))
 ggplot()  + 
    geom_polygon(aes(x=X, y=Y), col="red", fill="orange") +
@@ -71,7 +71,7 @@ A polygon is composed of three or more line segments whose starting and ending c
 
 ### Raster
 
-```{r echo=FALSE, fig.cap = "A simple raster object defined by a 10x10 array of cells or pixels.", fig.height=1.8, fig.width=1.8}
+```{r echo=FALSE, fig.cap = "A simple raster object defined by a 10x10 array of cells or pixels.", fig.height=1.8, fig.width=1.8, fig.align='center'}
 
 library(raster) 
 r <- raster(nrows = 10, ncols=10, xmn=0, xmx=4, ymn=0, ymx=4) 
@@ -110,13 +110,13 @@ How one chooses to represent a real-world entity will be in large part dictated 
 
 The following two maps represent the same entity: the Boston region. At a small scale (e.g. 1:10,000,000), Boston and other cities may be best represented as points. At a large scale (e.g. 1:34,000), Boston may be best represented as a polygon. Note that at this large scale, roads may also be represented as polygon features instead of polylines.
 
-```{r echo=FALSE, fig.cap = "Map of the Boston area at a 1:10,000,000 scale. Note that in geography, this is considered small scale whereas in layperson terms, this extent is often referred to as a large scale (i.e. covering a large area).", fig.width=3}
+```{r echo=FALSE, fig.cap = "Map of the Boston area at a 1:10,000,000 scale. Note that in geography, this is considered small scale whereas in layperson terms, this extent is often referred to as a large scale (i.e. covering a large area).", fig.width=3, fig.align='center'}
 
 knitr::include_graphics("img/Boston_small_scale.jpg")
 ```
 
 
-```{r echo=FALSE, fig.cap = "Map of the Boston area at a 1:34,000 scale. Note that in geography, this is considered large scale whereas in layperson terms, this extent is often referred to as a small scale (i.e. covering a small area).", fig.width=3}
+```{r echo=FALSE, fig.cap = "Map of the Boston area at a 1:34,000 scale. Note that in geography, this is considered large scale whereas in layperson terms, this extent is often referred to as a small scale (i.e. covering a small area).", fig.width=3, fig.align='center'}
 
 knitr::include_graphics("img/Boston_large_scale.jpg")
 ```
@@ -156,7 +156,7 @@ While whole numbers can be stored as a float or double (i.e. we can store the nu
 
 While storing an integer value as a float may not have dire consequences, the same cannot be said of storing a float as an integer. For example, if your values consist of 0.2, 0.01, 0.34, 0.1 and 0.876, their integer counterpart would be 0, 0, 0, and 1 (i.e. values rounded to the nearest whole number). This can have a significant impact on a map as shown in the following example.
 
-```{r echo=FALSE, fig.cap = "Map of data represented as decimal (float) values.",  fig.height=3}
+```{r echo=FALSE, fig.cap = "Map of data represented as decimal (float) values.",  fig.height=3, message=FALSE, warning=FALSE, results='hide', fig.align='center'}
 
 library(sf)
 #library(spdep)
@@ -177,7 +177,7 @@ tm_shape(eire) + tm_polygons("x", style = "fixed", breaks = round(brks,1),
 ```
 
 
-```{r echo=FALSE, fig.cap = "Map of same data represented as integers instead of float.", fig.height=3}
+```{r echo=FALSE, fig.cap = "Map of same data represented as integers instead of float.", fig.height=3, message=FALSE, warning=FALSE, fig.align='center'}
 eire$x.int <- round(eire$x) 
 tm_shape(eire) + tm_polygons("x.int", style = "fixed", breaks = round(brks,1), 
                              pal = clr, title = "Rounded value") +
