--- a/07-Map-making-tips.Rmd
+++ b/07-Map-making-tips.Rmd
@@ -12,7 +12,7 @@ Knowing why and for whom a map is being made will dictate its layout. If it's to
 
 Knowing the intended audience should also dictate what you will convey and how. If it's a general audience with little technical expertise then a simpler presentation may be in order. If the audience is well versed in the topic, then the map may be more complex. 
 
-```{r f06-map, echo=FALSE, fig.cap = "Map elements. Note that not all elements are needed, nor are they appropriate in some cases. Can you identify at least one element that does not belong in the map (hint, note the orientation of the longitudinal lines; are they parallel to one another? What implication does this have on the North direction and the placement of the North arrow?)", fig.height=4}
+```{r f06-map, echo=FALSE, fig.cap = "Map elements. Note that not all elements are needed, nor are they appropriate in some cases. Can you identify at least one element that does not belong in the map (hint, note the orientation of the longitudinal lines; are they parallel to one another? What implication does this have on the North direction and the placement of the North arrow?)", fig.height=4, fig.align='center'}
 
 knitr::include_graphics("img/Map_elements.png", dpi = NA)
 ```
@@ -23,7 +23,7 @@ knitr::include_graphics("img/Map_elements.png", dpi = NA)
 
 Here's an example of a map layout that showcases several bad practices.
 
-```{r Bad-map, echo=FALSE, fig.cap = "Example of a *bad* map. Can you identify the problematic elements in this map? "}
+```{r Bad-map, echo=FALSE, fig.cap = "Example of a *bad* map. Can you identify the problematic elements in this map? ", fig.align='center'}
 
 knitr::include_graphics("img/Bad_map.jpg")
 ```
@@ -45,7 +45,7 @@ knitr::include_graphics("img/ScaleBar.svg")
 Following the aforementioned guidelines can go a long way in producing a *good* map. Here, a divergent color scheme is chosen whereby the two hues converge to the median income value. A coordinate system that minimizes distance error measurements and that preserves "north" orientation across the main map's extent is chosen since a scale bar and north arrow are present in the map. The inset map (lower left map body) is placed lower in the visual hierarchy and could be omitted if the intended audience was familiar with the New England area. A unique (and unconventional) legend orders the color swatches in the order in which they appear in the map (i.e. following a strong north-south income gradient).
 
 
-```{r Good-map, echo=FALSE, fig.cap = "Example of an *improved* map."}
+```{r Good-map, echo=FALSE, fig.cap = "Example of an *improved* map.", fig.align='center'}
 knitr::include_graphics("img/Good_map.jpg")
 ```
 
@@ -53,7 +53,7 @@ knitr::include_graphics("img/Good_map.jpg")
 
 Maps may include text elements such as labels and ancillary text blocks. The choice of typeface (font family) and font (size, weight and style of a typeface) can impact the legibility of the map. A rule of thumb is to limit the number of fonts to two: a **serif** and a **sans serif** font.
 
-```{r f06-serif, echo=FALSE, fig.cap = "Serif fonts are characterized by brush strokes at the letter tips (circled in red in the figure). Sans Serif fonts are devoid of brush strokes."}
+```{r f06-serif, echo=FALSE, fig.cap = "Serif fonts are characterized by brush strokes at the letter tips (circled in red in the figure). Sans Serif fonts are devoid of brush strokes.", fig.align='center'}
 knitr::include_graphics("img/Fonts.svg")
 ```
 
@@ -62,6 +62,6 @@ Serif fonts are generally used to label natural features such as mountain ridges
 
 Varying the typeset size across the map should be avoided unless a visual hierarchy of labels is desired. You also may want to stick with a single font color across the map unless the differences in categories need to be emphasized. In the following example, a snapshot of a map before (left) and after (right) highlight how manipulating typeset colors and styles (i.e. italic, bold) can have a desirable effect **if done properly**.
 
-```{r f06-typeset, echo=FALSE, fig.cap = "The lack of typeset differences makes the map on the left difficult to differentiate county names from lake/river names. The judicious use of font colors and style on the right facilitate the separation of features.", out.width=600}
+```{r f06-typeset, echo=FALSE, fig.cap = "The lack of typeset differences makes the map on the left difficult to differentiate county names from lake/river names. The judicious use of font colors and style on the right facilitate the separation of features.", out.width=600, fig.align='center'}
 knitr::include_graphics("img/labels.svg")
 ```
