--- a/packages.bib
+++ b/packages.bib
@@ -11,15 +11,15 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 0.34},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  note = {R package version 0.35},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.43},
+  note = {R package version 1.44},
   url = {https://yihui.org/knitr/},
 }
 
@@ -27,8 +27,8 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
-  note = {R package version 2.23},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  note = {R package version 2.24},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Book{bookdown2016,
